--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "commplex",
-	"version": "0.0.1",
+	"version": "0.0.4",
 	"license": "MIT",
 	"bin": "dist/cli.js",
 	"type": "module",
@@ -17,9 +17,7 @@
 		"dist"
 	],
 	"dependencies": {
-		"@preact/signals-react": "^3.0.1",
-		"immer": "^10.1.1",
-		"ink": "^4.1.0",
+		"ink": "github:gunnnnii/ink",
 		"mobx": "^6.13.7",
 		"mobx-react-lite": "^4.1.0",
 		"package-up": "^5.0.0",
@@ -29,7 +27,6 @@
 		"react-router": "^7.6.0",
 		"remeda": "^2.21.3",
 		"strip-ansi": "^7.1.0",
-		"supports-color": "^10.0.0",
 		"ts-pattern": "^5.7.0",
 		"wrap-ansi": "^9.0.0",
 		"zod": "^3.24.4"
@@ -38,6 +35,7 @@
 		"@babel/plugin-proposal-decorators": "^7.27.1",
 		"@biomejs/biome": "1.9.4",
 		"@total-typescript/tsconfig": "^1.0.4",
+		"@types/node": "22",
 		"@types/react": "18.3.21",
 		"@vitejs/plugin-react": "^4.4.1",
 		"chalk": "^5.4.1",
@@ -46,10 +44,5 @@
 		"typescript": "^5.0.3",
 		"vite": "^6.3.5"
 	},
-	"packageManager": "pnpm@9.12.0+sha256.a61b67ff6cc97af864564f4442556c22a04f2e5a7714fbee76a1011361d9b726",
-	"pnpm": {
-		"patchedDependencies": {
-			"ink": "patches/ink.patch"
-		}
-	}
+	"packageManager": "pnpm@9.12.0+sha256.a61b67ff6cc97af864564f4442556c22a04f2e5a7714fbee76a1011361d9b726"
 }
