--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -32,8 +32,13 @@ jobs:
       - name: Build package
         run: pnpm build
 
-      - name: Save artifact
-        uses: actions/upload-artifact@v4
+      - name: Create ZIP
+        run: zip -r commplex-bundle.zip dist
+
+      - name: Upload to release
+        uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
         with:
-          name: commplex-bundle
-          path: dist
+          files: commplex-bundle.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
