--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,8 +6,8 @@ on:
         description: 'Version to publish'
         required: true
         default: '0.0.0'
-  release:
-    types: [published]
+  # release:
+    # types: [published]
 jobs:
   publish:
     environment: production
