--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -35,6 +35,7 @@ jobs:
         run: pnpm build
 
   publish:
+    needs: build
     if: github.ref_type == 'tag'
     environment: production
     runs-on: ubuntu-latest
