--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -3,8 +3,11 @@ name: Build project
 on:
   workflow_dispatch:
   push:
+    branches:
+      - main
     tags:
       - 'v*.*.*'
+
 jobs:
   build:
     environment: production
@@ -58,12 +61,10 @@ jobs:
     - name: Upload to release
       uses: softprops/action-gh-release@v2
       with:
-        draft: true
-        generate_release_notes: true
         files: commplex-bundle.zip
 
-    # - name: Authenticate npm
-    #   run: npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-    # - name: Publish package
-    #   working-directory: ./dist
-    #   run: npm publish
+    - name: Authenticate npm
+      run: npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
+    - name: Publish package
+      working-directory: ./dist
+      run: npm publish
