--- a/package.json
+++ b/package.json
@@ -44,5 +44,19 @@
 		"typescript": "^5.0.3",
 		"vite": "^6.3.5"
 	},
+	"commplex": {
+		"includePackageScripts": false,
+		"scripts": {
+			"watch": {
+				"script": "pnpm dev",
+				"autostart": true,
+				"type": "service"
+			},
+			"build": {
+				"script": "pnpm build",
+				"type": "task"
+			}
+		}
+	},
 	"packageManager": "pnpm@9.12.0+sha256.a61b67ff6cc97af864564f4442556c22a04f2e5a7714fbee76a1011361d9b726"
 }
