--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@gunnnnii/commplex-cli",
-	"version": "0.0.11",
+	"version": "0.0.12",
 	"license": "MIT",
 	"type": "module",
 	"engines": {
@@ -48,12 +48,12 @@
 		"includePackageScripts": false,
 		"scripts": {
 			"watch": {
-				"script": "pnpm dev",
+				"command": "pnpm dev",
 				"autostart": true,
 				"type": "service"
 			},
 			"build": {
-				"script": "pnpm build",
+				"command": "pnpm build",
 				"type": "task"
 			}
 		}
