--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"dist"
 	],
 	"dependencies": {
+		"clipboardy": "^4.0.0",
 		"ink": "github:gunnnnii/ink",
 		"mobx": "^6.13.7",
 		"mobx-react-lite": "^4.1.0",
