--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,5 +24,5 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true
 	},
-	"include": ["source", "vite-env.d.ts"]
+	"include": ["source", "vite-env.d.ts", "reset.d.ts"]
 }
